vpc.tf
resource "aws_vpc" "webapp-poc" {
 cidr_block = "10.0.0.0/16"
 
 tags = {
   Name = "Webapp VPC"
 }
}
